adding gitignore and action

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,7 @@ name: Deploy WP-Select-P-Category to WP.org
 on:
   push:
     tags:
-      - "*"
+        deploy-"*"
 jobs:
   tag:
     name: New tag
