update action for push and pull-request

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,8 +1,6 @@
 name: Deploy WP-Select-P-Category to WP.org
 on:
-  push:
-    tags:
-        deploy-"*"
+  [push, pull_request]
 jobs:
   tag:
     name: New tag
