--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,7 @@ jobs:
     name: New tag
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: WordPress Plugin Deploy
         uses: mobeenabdullah/WP-Select-Primary-Category@master
         env:
