--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: WordPress Plugin Deploy
+      - name: WordPress Plugin Deployment
         uses: mobeenabdullah/WP-Select-Primary-Category@master
         env:
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
