--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'WordPress Plugin Deploy'
+name: 'Deploy WP-Select-P-Category to WP.org'
 description: 'Deploy to the WordPress Plugin Repository'
 author: 'Mobeen Abdullah'
 runs:
