--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,15 @@
-name: 'Deploy to WordPress.org'
-description: 'Deploy to the WordPress Plugin Repository'
-author: 'Mobeen Abdullah'
-runs:
+name: Deploy to WordPress.org
+on:
+  [push, pull_request]
+jobs:
+  tag:
+    name: New tag
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: WordPress Plugin Deploy
+        uses: 10up/action-wordpress-plugin-deploy@master
+        env:
+          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+          SLUG: wp-select-primary-category
